Hoàn thành step 4

--- a/src/main/resources/templates/task/create/step-2.html
+++ b/src/main/resources/templates/task/create/step-2.html
@@ -204,7 +204,7 @@
                                    tabindex="0" role="button">
                                     <span>Thông tin &amp; Nhận xét</span>
                                 </a>
-                                <a class="recommendations__hire-btn btn btn-primary btn-block " >
+                                <a class="recommendations__hire-btn btn btn-primary btn-block " th:href="@{/task/create/step3}">
                                     <span>Chọn &amp; Tiếp tục</span>
                                 </a>
                                 <div class="u-hidden--sm">
