Sửa lại step thêm trường giờ gian dự tính, gắn link vào các step, xóa trường thẻ Banking ở step 4, chỉnh kích thướng Button CConfirm & Chat ở step 4

--- a/src/main/resources/templates/task/create/step-1.html
+++ b/src/main/resources/templates/task/create/step-1.html
@@ -207,43 +207,30 @@
                                 </div>
                             </div>
                         </div>
-<!--                        <div class="row form-group">-->
-<!--                            <div class="col-md-12 mb-3 mb-md-0 task-box bg-white border" data-editing=false-->
-<!--                                 data-state="empty">-->
-<!--                                <span class="status-task-box">-->
-<!--                                    <i class="icon-done text-primary"></i>-->
-<!--                                </span>-->
-<!--                                <div class="form-group text-uppercase text-label">Thời gian dự tính <span-->
-<!--                                    class="text-danger error-msg d-none"></span></div>-->
-<!--                                <div class="box-input">-->
-<!--                                    <div class="form-group text-center">-->
-<!--                                        <label class="radio-inline mx-4 d-inline text-bold">-->
-<!--                                            <input type="radio" name="estimated-time" class="estimated-time" checked value="Nhỏ ~ 1 giờ">-->
-<!--                                            Nhỏ ~ 1 giờ-->
-<!--                                        </label>-->
-<!--                                        <label class="radio-inline mx-4 d-inline text-bold">-->
-<!--                                            <input type="radio" name="estimated-time" class="estimated-time" value="Trung bình-->
-<!--                                            ~ 2 - 3 giờ"> Trung bình-->
-<!--                                            ~ 2 - 3 giờ-->
-<!--                                        </label>-->
-<!--                                        <label class="radio-inline mx-4 d-inline text-bold">-->
-<!--                                            <input type="radio" name="estimated-time" class="estimated-time" value="Lớn ~ 4-->
-<!--                                            giờ trở lên"> Lớn ~ 4-->
-<!--                                            giờ trở lên-->
-<!--                                        </label>-->
-<!--                                    </div>-->
-<!--                                    <div class="mt-5 form-group text-center">-->
-<!--                                        <button class="btn btn-success btn-continue px-4" data-type="estimated-time"-->
-<!--                                                th:type="button">Tiếp tục-->
-<!--                                        </button>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <div class="form-group preview-content d-none">-->
-<!--                                    <i class="icon-clock-o text-secondary mr-1"></i>-->
-<!--                                    <span class="content"></span>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        <div class="row form-group">
+                            <div class="col-md-12 mb-3 mb-md-0 task-box bg-white border" data-editing=false
+                                 data-state="empty">
+                                <span class="status-task-box">
+                                    <i class="icon-done text-primary"></i>
+                                </span>
+                                <div class="form-group text-uppercase text-label">Thời gian dự tính (giờ) <span
+                                    class="text-danger error-msg d-none"></span></div>
+                                <div class="box-input">
+                                    <div class="form-group">
+                                        <input type="number" class="form-control w-25" id="estimated-time">
+                                    </div>
+                                    <div class="mt-5 form-group text-center">
+                                        <button class="btn btn-success btn-continue px-4" data-type="estimated-time"
+                                                th:type="button">Tiếp tục
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="form-group preview-content d-none">
+                                    <i class="icon-clock-o text-secondary mr-1"></i>
+                                    <span class="content"></span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0 task-box bg-white border" data-editing=false
                                  data-state="empty">
