--- a/src/main/resources/templates/task/create/step-3.html
+++ b/src/main/resources/templates/task/create/step-3.html
@@ -221,7 +221,7 @@
                                         22 - T11, 8:30
                                     </div>
                                     <div>
-                                        <a href="#" class="btn btn-primary w-100 my-3 py-2">
+                                        <a th:href="@{/task/create/step4}" class="btn btn-primary w-100 my-3 py-2">
                                             Chọn &amp; tiếp tục
                                         </a>
                                     </div>
