--- a/src/main/resources/templates/task/create/step-4.html
+++ b/src/main/resources/templates/task/create/step-4.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Create Task</title>
-    <th:block th:include="fragment/layout :: head"> </th:block>
+    <th:block th:include="fragment/layout :: head"></th:block>
 </head>
 <body>
 
@@ -105,28 +105,15 @@
                         <div class="form-group">
                             <label class="d-block">
                                 <div class="mb-3">
-                                    Số tài khoản
-                                </div>
-                                <input type="text" class="form-control iBanking" placeholder="Nhập số tài khoản">
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <label class="d-block">
-                                <div class="mb-3">
                                     Số điện thoại
                                 </div>
                                 <input type="text" class="form-control iBanking w-50" placeholder="Số điện thoại">
                             </label>
                         </div>
                     </div>
-                    <div class="p-1" style="font-size: 13px;letter-spacing: 1px;">
+                    <div class="px-3" style="font-size: 13px;letter-spacing: 1px;">
                         Đừng lo lắng, bạn sẽ không phải trả phí cho đến khi công việc của bạn hoàn thành. Sau khi xác
                         nhận, bạn có thể trò chuyện với Nhân viên của mình để cập nhật thông tin chi tiết.
-                    </div>
-                    <div class="text-center my-3">
-                        <a th:href="@{#}" class="btn btn-primary py-2 px-5 disabled">
-                            Xác nhận & nói chuyện
-                        </a>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-5 p-2">
@@ -167,15 +154,26 @@
                             </div>
                         </div>
                         <div class="my-3 t-14">
-                            Một khoản phí <span class="t-green">Tin cậy và Hỗ trợ 15%</span> được thêm vào tổng tỷ lệ của Nhân viên.
+                            Một khoản phí <span class="t-green">Tin cậy và Hỗ trợ 15%</span> được thêm vào tổng tỷ lệ
+                            của Nhân viên.
                         </div>
                         <div class="my-3 t-14">
-                            Bạn sẽ không bị tính phí cho đến khi công việc của bạn hoàn thành. Công việc tối thiểu một giờ. Bạn có thể hủy bỏ hoặc sắp xếp lại bất cứ lúc nào. Nếu bạn hủy nhiệm vụ trong vòng 24 giờ kể từ thời gian bắt đầu được lên lịch, bạn có thể bị tính phí hủy trong một giờ với mức giá hàng giờ của Nhân viên.
+                            Bạn sẽ không bị tính phí cho đến khi công việc của bạn hoàn thành. Công việc tối thiểu một
+                            giờ. Bạn có thể hủy bỏ hoặc sắp xếp lại bất cứ lúc nào. Nếu bạn hủy nhiệm vụ trong vòng 24
+                            giờ kể từ thời gian bắt đầu được lên lịch, bạn có thể bị tính phí hủy trong một giờ với mức
+                            giá hàng giờ của Nhân viên.
                         </div>
                         <div class="my-3 t-14">
                             <a th:href="@{#}" class="t-green">Tìm hiểu thêm</a> về chính sách của chúng tôi.
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="text-center my-3 col-lg-12">
+                    <a th:href="@{#}" class="btn btn-primary py-3 px-5 disabled">
+                        Xác nhận & nói chuyện
+                    </a>
                 </div>
             </div>
         </div>
