register-task-view-success

--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -186,6 +186,7 @@
     <script th:src="@{/js/aos.js}"></script>
     <script th:src="@{/js/mediaelement-and-player.min.js}"></script>
     <script th:src="@{/js/main.js}"></script>
+    <script th:src="@{/js/register-task/task2.js}"></script>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
                 var mediaElements = document.querySelectorAll('video, audio'), total = mediaElements.length;
